fix overflow on submission page

--- a/app/assets/stylesheets/submissions.css.scss
+++ b/app/assets/stylesheets/submissions.css.scss
@@ -166,7 +166,6 @@ ol li a:visited {
 #container {
 	border-radius: 8px;
 	background-color: white;
-	height: 700px;
 		
 }
 
